Updated layout support

--- a/Dermalogica/HTMLs/line-view-b3.html
+++ b/Dermalogica/HTMLs/line-view-b3.html
@@ -4,6 +4,7 @@
 			display: flex;
 			gap: 1rem;
 			width: 100%;
+			justify-content: space-around;
 		}
 		.derm-line-view-box {
 			width: max-content;
