--- a/Dermalogica/HTMLs/card-view-b1.html
+++ b/Dermalogica/HTMLs/card-view-b1.html
@@ -12,7 +12,7 @@
 		}
 	</style>
 	<div class="derm-card-view">
-		<p class="title-lg">{{Name}}</p>
+		<p style="display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis;"class="title-lg">{{Name}}</p>
 		<p class="body-md">{{Type}}</p>
 		<p class="body-md">{{Stock}}</p>
 		<span class="derm-card-view-box">
