--- a/Dermalogica/HTMLs/line-view-b1.html
+++ b/Dermalogica/HTMLs/line-view-b1.html
@@ -1,4 +1,4 @@
-<div>
+<div style="font-family: Helvetica;">
 	<p style="display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis;" class="title-md">{{Name}}</p>
 	<p class="body-md">{{Type}}</p>
 	<p class="body-md">{{ID}}</p>
