--- a/Dermalogica/HTMLs/line-view-b2.html
+++ b/Dermalogica/HTMLs/line-view-b2.html
@@ -1,8 +1,8 @@
-<div>
+<div style="font-family: Helvetica;">
 	<span class="body-xs title ng-star-inserted">Paid Qty</span>
 	<span class="body-sm value">{{PaidQty}}</span>
 </div>
-<div>
+<div style="font-family: Helvetica;">
 	<span class="body-xs title ng-star-inserted">Free Qty</span>
 	<span class="body-sm value">{{FreeQty}}</span>
 </div>
