Added product information

--- a/Dermalogica/HTMLs/item-page-2-Icons.html
+++ b/Dermalogica/HTMLs/item-page-2-Icons.html
@@ -45,48 +45,48 @@
 <div stye="icon-list">
 	<!-- !! -->
 	<!-- Change display from unset to hidden to remove from HTML -->
-	<span class="icon-bullet" style="display: unset">
+	<span class="icon-bullet" style="display: IconDisplay_0">
 		<!-- ?? -->
 		<!-- Should the SVG be injected like other variables? -->
 		<svg class="icon" width="100px" height="100px" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
 			<circle cx="50" cy="50" r="50" />
 		</svg>
-		<p class="body-xs color-dimmed">{{IconTitle}}</p>
+		<p class="body-xs color-dimmed">{{IconTitle_0}}</p>
 	</span>
-	<span class="icon-bullet" style="display: unset">
+	<span class="icon-bullet" style="display: IconDisplay_1">
 		<svg class="icon" width="100px" height="100px" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
 			<circle cx="50" cy="50" r="50" />
 		</svg>
-		<p class="body-xs color-dimmed">{{IconTitle}}</p>
+		<p class="body-xs color-dimmed">{{IconTitle_1}}</p>
 	</span>
-	<span class="icon-bullet" style="display: unset">
+	<span class="icon-bullet" style="display: IconDisplay_2">
 		<svg class="icon" width="100px" height="100px" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
 			<circle cx="50" cy="50" r="50" />
 		</svg>
-		<p class="body-xs color-dimmed">{{IconTitle}}</p>
+		<p class="body-xs color-dimmed">{{IconTitle_2}}</p>
 	</span>
-	<span class="icon-bullet" style="display: unset">
+	<span class="icon-bullet" style="display: IconDisplay_3">
 		<svg class="icon" width="100px" height="100px" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
 			<circle cx="50" cy="50" r="50" />
 		</svg>
-		<p class="body-xs color-dimmed">{{IconTitle}}</p>
+		<p class="body-xs color-dimmed">{{IconTitle_3}}</p>
 	</span>
-	<span class="icon-bullet" style="display: unset">
+	<span class="icon-bullet" style="display: IconDisplay_4">
 		<svg class="icon" width="100px" height="100px" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
 			<circle cx="50" cy="50" r="50" />
 		</svg>
-		<p class="body-xs color-dimmed">{{IconTitle}}</p>
+		<p class="body-xs color-dimmed">{{IconTitle_4}}</p>
 	</span>
-	<span class="icon-bullet" style="display: unset">
+	<span class="icon-bullet" style="display: IconDisplay_5">
 		<svg class="icon" width="100px" height="100px" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
 			<circle cx="50" cy="50" r="50" />
 		</svg>
-		<p class="body-xs color-dimmed">{{IconTitle}}</p>
+		<p class="body-xs color-dimmed">{{IconTitle_5}}</p>
 	</span>
-	<span class="icon-bullet" style="display: unset">
+	<span class="icon-bullet" style="display: IconDisplay_6">
 		<svg class="icon" width="100px" height="100px" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
 			<circle cx="50" cy="50" r="50" />
 		</svg>
-		<p class="body-xs color-dimmed">{{IconTitle}}</p>
+		<p class="body-xs color-dimmed">{{IconTitle_6}}</p>
 	</span>
 </div>
