added mobile info field, support helvetica font

--- a/Dermalogica/HTMLs/item-page-1-ProductTitles.html
+++ b/Dermalogica/HTMLs/item-page-1-ProductTitles.html
@@ -1,5 +1,5 @@
-<div id="titles">
-	<h2 class=".color-user-primary title-4xl">{{ProductName}}</h2>
+<div style="display:flex; flex-direction: column; gap: variables.$spacing-lg" id="titles">
+	<h2 class="color-user-primary title-4xl">{{ProductName}}</h2>
 	<p class="body-md color-dimmed">{{ProductDescription}}</p>
 	<p class="body-lg">{{ID}}</p>
 	<p class="body-lg">{{Price}}</p>
