--- a/Nelt/HTMLs/TSAProductInfoContent.html
+++ b/Nelt/HTMLs/TSAProductInfoContent.html
@@ -16,8 +16,8 @@
 	</style>
 	<p class="body-lg color-dimmed">{{ProductDescription}}</p>
 	<div class="nelt-one-liner">
-		<p class="body-lg title ng-star-inserted">ID:</p>
-		<p class="body-lg value">{{ID}}</p>
+		<p class="body-lg title ng-star-inserted">Id:</p>
+		<p class="body-lg value">{{Id}}</p>
 	</div>
 	<div class="nelt-one-liner">
 		<p class="body-lg title ng-star-inserted">Cena:</p>
