--- a/Nelt/HTMLs/TSAMediumViewTitle.html
+++ b/Nelt/HTMLs/TSAMediumViewTitle.html
@@ -1,3 +1,15 @@
-<div>
-	<h3 style="display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis;" class="body-lg title">{{CardTitle}}</h3>
-</div>
+<span style="height: 100%; display: flex; align-items: center">
+	<h3
+		style="
+			display: -webkit-box;
+			-webkit-line-clamp: 3;
+			-webkit-box-orient: vertical;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			margin: 0;
+		"
+		class="body-3xl title"
+	>
+		{{CardTitle}}
+	</h3>
+</span>
