--- a/Nelt/HTMLs/TSAMediumViewTitle.html
+++ b/Nelt/HTMLs/TSAMediumViewTitle.html
@@ -8,7 +8,7 @@
 			text-overflow: ellipsis;
 			margin: 0;
 		"
-		class="body-3xl title"
+		class="color-user-primary title-3xl"
 	>
 		{{CardTitle}}
 	</h3>
